# AI_Interviewer

./: .gitignore  Dockerfile  Dockerfile.sandbox  README.md  SPEECH_README.md  api_tests.py  build_sandbox_image.sh  checklist.md  config.env.example  cursor_implementing_a_coding_panel_feat.md  data-flow.md  docker-compose.yml  env.example  main_ai_interviewer.py  problem_statement_test.py  progress-report.md  pyproject.toml  requirements.txt  rulee.mdc  setup.py  shortcomings.md  speech_requirements.txt  test_server.py  vibe-coding-guide.md
ai_interviewer/: __init__.py  cli.py  server.py  voice_cli.py
ai_interviewer/auth/: config.py  models.py  password_utils.py  routes.py  schemas.py  security.py  services.py
ai_interviewer/core/: ai_interviewer.py  database.py
ai_interviewer/models/: coding_challenge.py  rubric.py  user_models.py
ai_interviewer/prompts/: problem_generation_prompts.py
ai_interviewer/scripts/: test_enhanced_response_analysis.py  test_question_tools.py
ai_interviewer/static/: admin_problem_generator.html
ai_interviewer/tests/: __init__.py  pytest.ini  requirements-test.txt  run_tests.sh  test_code_execution_async.py  test_coding_challenge.py  test_integration.py  test_workflow.py
ai_interviewer/tools/: README.md  code_execution.py  code_feedback.py  code_quality.py  coding_tools.py  docker_sandbox.py  pair_programming.py  problem_generation_tool.py  (+2 more)
docs/: memory_management.md  mongodb_atlas_setup.md
frontend/: README.md  package-lock.json  package.json
qenv/: pyvenv.cfg
scripts/: clear_session.py  migrate_tool_calls.py  test_problem_generation.py
specs/: product-requirements.md  user-story.md
(+33 files in other folders)
