[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_interviewer"
version = "0.1.0"
authors = [
    { name = "AI Interviewer Team" }
]
description = "An AI-powered technical interview platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-core>=0.1.0",
    "python-dotenv>=1.0.0",
    "radon>=6.0.1",
    "pylint>=3.0.0",
    "black>=23.7.0",
    "pydantic>=2.5.2",
    "typing-extensions>=4.8.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.27",
    "langchain-google-genai>=0.0.5",
    "reportlab>=4.1.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
    "coverage>=7.3.0",
    "radon>=6.0.1",
    "pylint>=3.0.0",
    "black>=23.7.0",
    "mccabe>=0.7.0",
    "reportlab>=4.1.0"
]

[tool.setuptools.packages.find]
include = ["ai_interviewer*"]
exclude = ["ai_interviewer.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=ai_interviewer --cov-report=term-missing --cov-report=html --cov-branch --no-cov-on-fail"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
]